CMAKE_MINIMUM_REQUIRED(VERSION 3.10) 
PROJECT(HssnMap) 
  
SET(CMAKE_CXX_STANDARD 11) 
SET(CMAKE_CXX_STANDARD_REQUIRED True) 
  
INCLUDE_DIRECTORIES(headers) 
  
FIND_PACKAGE( Boost 1.58.0 COMPONENTS program_options REQUIRED ) 
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} ) 
  
SET(SOURCES src/main.cpp) 
  
ADD_EXECUTABLE(main ${SOURCES}) 
 
TARGET_LINK_LIBRARIES(main stdc++ -lhiredis -lrt ${Boost_LIBRARIES})

